Additional fix for header flickering
+ Added a margin at the bottom of every page equal to the size of the header when it's first loaded; this should prevent any issues where the intersection observer gets caught between states. Additional values will be required once the header size is fixed for high resolution viewports

--- a/css/codeprojects.css
+++ b/css/codeprojects.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 0 100px;
 }
 
 h1 {
