--- a/css/scss/_common.scss
+++ b/css/scss/_common.scss
@@ -25,7 +25,7 @@ html {
 	background-color: $page-bg-color;
 }
 body {
-	margin: 0;
+	margin: 0 0 100px;
 }
 h1 {
 	// background-color: $content-bg-color;
